--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Assign_1_BSCS_19011519-158"
+rootProject.name = "Ammad"
 include ':app'
